--- a/web/themes/custom/tailwindcss/templates/layout/page.html.twig
+++ b/web/themes/custom/tailwindcss/templates/layout/page.html.twig
@@ -127,7 +127,7 @@
         <div class="tw-container tw-mx-auto tw-p-2">
             <div class="md:tw-flex tw--mx-4">
                 {% if page.postcontent_sidebar %}
-                    <aside class="md:tw-w-1/3 tw-p-4" role="complementary">
+                    <aside class="md:tw-w-1/3 tw-p-4 tw-sticky tw-bottom-0 tw-self-end" role="complementary">
                         {{ page.postcontent_sidebar }}
                     </aside>
                 {% endif %}
