--- a/web/themes/custom/tailwindcss/src/sass/app.scss
+++ b/web/themes/custom/tailwindcss/src/sass/app.scss
@@ -16,6 +16,7 @@ $font-title: 'Passion One', cursive;
 @import "responsive";
 @import "videos";
 @import "articles";
+@import "tournaments";
 @import "loader";
 
 @tailwind utilities;
