--- a/web/themes/custom/tailwindcss/templates/layout/layout--twocol-section.html.twig
+++ b/web/themes/custom/tailwindcss/templates/layout/layout--twocol-section.html.twig
@@ -14,7 +14,7 @@
     <div{{ attributes.addClass('tw-mt-10') }}>
 
         {% if content.first %}
-            <div {{ region_attributes.first.addClass('tw-w-1/2 tw-pr-6 block-title-no-caps','layout__region', 'layout__region--first') }}>
+            <div {{ region_attributes.first.addClass('tw-w-1/2 block-left block-title-no-caps','layout__region', 'layout__region--first') }}>
                 {{ content.first }}
             </div>
         {% endif %}
