--- a/web/modules/custom/optafeeds/components/widget_positions/template.html
+++ b/web/modules/custom/optafeeds/components/widget_positions/template.html
@@ -1,8 +1,11 @@
 <div class="opta-widgets" style="background-color: #ededed;">
-    <div class="p-4">
-        <select class="m-0 w-full py-3 px-4" @change="loadTable" v-model="tournament_season" name="id_tournament" id="widget_tournament_id">
+    <div class="p-4 relative">
+        <select class="m-0 w-full py-3 px-4 appearance-none" @change="loadTable" v-model="tournament_season" name="id_tournament" id="widget_tournament_id">
             <option :value="tour.field_opta_id + '-' + tour.field_opta_season" v-for="tour in tournaments">{{ tour.title }}</option>
-        </select>    
+        </select>  
+        <div class="pointer-events-none absolute inset-y-0 right-0 flex items-center px-8 text-gray-700">
+            <svg class="fill-current h-4 w-4" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20"><path d="M9.293 12.95l.707.707L15.657 8l-1.414-1.414L10 10.828 5.757 6.586 4.343 8z"/></svg>
+          </div>  
     </div>
     <div class="flex flex-no-wrap overflow-x-auto w-full">
         <div @click="selectOption(option.key)" v-for="option in options" class="flex-1 text-center py-3 px-6 font-title cursor-pointer table-option" :class="selected_option == option.key?'active':''">{{ option.label }}</div>
