--- a/web/themes/custom/tailwindcss/templates/node/node--gol-partido.html.twig
+++ b/web/themes/custom/tailwindcss/templates/node/node--gol-partido.html.twig
@@ -23,6 +23,8 @@
                     {{ content.field_mediastream }}
                 </div>
             {% endif %}
+        {% elseif node.field_url.uri %}
+            {{ content.field_url }}
         {% elseif node.hasField('field_image_h') %}
             <div class="tw-my-4">{{ content.field_image_h }}</div>
             <div class="tw-text-gray-650 tw-text-sm tw-mb-4">{{ node.field_image_h.title }}</div>
