--- a/web/modules/custom/custom_ads/css/components/custom_ads.module.css
+++ b/web/modules/custom/custom_ads/css/components/custom_ads.module.css
@@ -3,6 +3,27 @@
     background: #e3e3e3;
 }
 
+@media only screen
+  and (min-width: 320px) 
+  and (max-width: 736px)
+{
+	.ads-block {
+		padding: 5px;
+	    background: #e3e3e3;
+	}
+}
+
+@media only screen
+  and (min-width: 320px) 
+  and (max-width: 736px) 
+  and (orientation: portrait) 
+{ 
+	.ads-block {
+		padding: 5px;
+	    background: #e3e3e3;
+	}
+}
+
 .dugout {
 	margin:0 auto;
 	max-width:100%;
