--- a/web/modules/custom/custom_ads/css/components/custom_ads.module.css
+++ b/web/modules/custom/custom_ads/css/components/custom_ads.module.css
@@ -8,19 +8,9 @@
   and (max-width: 736px)
 {
 	.ads-block {
-		padding: 5px;
-	    background: #e3e3e3;
-	}
-}
-
-@media only screen
-  and (min-width: 320px) 
-  and (max-width: 736px) 
-  and (orientation: portrait) 
-{ 
-	.ads-block {
-		padding: 5px;
-	    background: #e3e3e3;
+    	padding: 0;
+    	background: #ffffff;
+    	text-align: -webkit-center;
 	}
 }
 
