--- a/web/themes/custom/tailwindcss/templates/node/node--gol-partido.html.twig
+++ b/web/themes/custom/tailwindcss/templates/node/node--gol-partido.html.twig
@@ -40,5 +40,5 @@
         <div class="comments">
             <div class="fb-comments" data-href="https://www.winsports.co{{ url }}" data-width="100%" data-numposts="5"></div>
         </div>
-
+    </div>
 </article>
