--- a/web/themes/custom/tailwindcss/templates/node/node--article--listado-de-etiquetas.html.twig
+++ b/web/themes/custom/tailwindcss/templates/node/node--article--listado-de-etiquetas.html.twig
@@ -8,7 +8,7 @@
                 {% if node.hasField('field_category') %}
                     <div class="category">{{ content.field_category }}</div>
                 {% endif %}
-                <h2 class="title-news">{{ label }}</h2>
+                <h2 class="title-news"><a href="{{ url }}">{{ label }}</a></h2>
                 <div class="tw-flex tw-items-center tw-text-primary tw-text-sm tw-my-4">
                     <div class="tw-mr-6 published_date">{{ node.getCreatedTime() | format_date('complete_date') }}</div>
                     {% if node.hasField('field_source') %}
