--- a/web/themes/custom/tailwindcss/templates/node/node--columna-blog--resumen-vertical.html.twig
+++ b/web/themes/custom/tailwindcss/templates/node/node--columna-blog--resumen-vertical.html.twig
@@ -12,6 +12,9 @@
         </div>
         <div class="title-mobile text-sm md:tw-text-base md:tw-w-1/2 md:tw-pl-2">
             <a href="{{ url }}">{{ label }}</a>
+            <div class="pb-4" {{ author_attributes }}>
+                {{ author_picture }}
+            </div>
         </div>
     </div>
 </div>
