--- a/web/themes/custom/tailwindcss/templates/node/node--columna-blog--video-player.html.twig
+++ b/web/themes/custom/tailwindcss/templates/node/node--columna-blog--video-player.html.twig
@@ -8,6 +8,9 @@
         <div class="tw-relative">
 {#            <div class="torneo category left-0">{{ content.field_category }}</div>#}
             <a href="{{ url }}">{{ label }}</a>
+            <div class="pb-4" {{ author_attributes }}>
+                {{ author_picture }}
+            </div>
         </div>
     </div>
 </div>
