--- a/web/themes/custom/tailwindcss/src/sass/_views.scss
+++ b/web/themes/custom/tailwindcss/src/sass/_views.scss
@@ -11,6 +11,14 @@
       @apply w-full;
     }
   }
+  .user.compact{
+    @apply leading-none;
+    .image{
+      img{
+        @apply w-auto;
+      }
+    }
+  }
   @screen md{
     .title{
       bottom: 30px;
@@ -51,7 +59,6 @@
     }
   }
 }
-
 .player-goles{
   .views-element-container{
     >div{
