--- a/web/themes/custom/tailwindcss/templates/node/user.html.twig
+++ b/web/themes/custom/tailwindcss/templates/node/user.html.twig
@@ -1,4 +1,4 @@
-<div class="user compact tw-max-width-sm" {{ attributes }}>
+<div class="user compact tw-max-w-sm" {{ attributes }}>
     <div class="tw-flex flex text-sm">
         <div class="image self-center tw-mr-4 md:tw-mr-0 md:tw-w-3/12">{{ content.field_image }}</div>
         <div class="text-sm md:tw-w-9/12">
