--- a/web/themes/custom/tailwindcss/src/sass/_views.scss
+++ b/web/themes/custom/tailwindcss/src/sass/_views.scss
@@ -59,6 +59,13 @@
     }
   }
 }
+.columna-blog.resumen-vertical{
+  .user.compact{
+    .nombres{
+      @apply text-primary;
+    }
+  }
+}
 .player-goles{
   .views-element-container{
     >div{
