--- a/web/themes/custom/tailwindcss/templates/node/node--columna-blog--resumen-vertical.html.twig
+++ b/web/themes/custom/tailwindcss/templates/node/node--columna-blog--resumen-vertical.html.twig
@@ -1,4 +1,4 @@
-<div class="columna-blog resumen-vetical" {{ attributes.addClass(classes) }}>
+<div class="columna-blog resumen-vertical" {{ attributes.addClass(classes) }}>
     <div class="md:tw-flex md:tw-items-top">
         <div class="image md:tw-w-1/2 tw-relative">
             {% if node.hasField('field_image_h') %}
