--- a/web/themes/custom/tailwindcss/templates/node/node--galeria--teaser.html.twig
+++ b/web/themes/custom/tailwindcss/templates/node/node--galeria--teaser.html.twig
@@ -1,7 +1,7 @@
 <div class="galeria teaser" {{ attributes.addClass(classes) }}>
     <div class="image mb-4">
-        {% if node.hasField('field_image') %}
-            {{ content.field_image }}
+        {% if node.hasField('field_images') %}
+            {{ content.field_images }}
         {% endif %}
     </div>
     <div class="tw-text-sm">
