--- a/web/modules/custom/mediastream_formatter/templates/mediastream.html.twig
+++ b/web/modules/custom/mediastream_formatter/templates/mediastream.html.twig
@@ -2,7 +2,7 @@
     <div id="video-{{ mediastream_id }}">
         <div class="image tw-relative tw-cursor-pointer" data-id="{{ mediastream_id }}">
             {{ image }}
-            <div class="tw-absolute tw-top-0 tw-left-0 play-icon tw-w-full tw-h-full tw-flex tw-items-center tw-justify-center tw-bg-black tw-opacity-50">
+            <div class="tw-absolute tw-top-0 tw-left-0 play-icon tw-w-full tw-h-full tw-flex tw-items-center tw-justify-center">
                 <img src="/themes/custom/tailwindcss/images/icons/play.png" alt="Play" class="tw-h-24 tw-w-24 tw-opacity-100">
             </div>
         </div>
