--- a/web/modules/custom/optafeeds/components/widget_positions/template.html
+++ b/web/modules/custom/optafeeds/components/widget_positions/template.html
@@ -1,3 +1,11 @@
+<div class="tool flex mb-4">
+    <div class="w-2/12 self-center text-center">
+        <img class="inline-block" src="/themes/custom/tailwindcss/images/tool.png">
+    </div>
+    <div class="w-10/12 text-xs self-center opta-widgets">
+        Más datos y estadísticas desplazándose de forma horizontal 
+    </div>
+</div>
 <div class="opta-widgets" style="background-color: #ededed;">
     <div class="p-4 relative">
         <select class="m-0 w-full py-3 px-4 appearance-none" @change="loadTable" v-model="tournament_season" name="id_tournament" id="widget_tournament_id">
