--- a/web/themes/custom/tailwindcss/src/sass/_views.scss
+++ b/web/themes/custom/tailwindcss/src/sass/_views.scss
@@ -1019,3 +1019,8 @@ div#horizontal-results {
     display: none;
   }
 }
+div#block-horizontalresults{
+  img {
+    height: min-content !important;
+}
+}
