update widget fc

--- a/web/modules/custom/optawidgets/components/opta_tournament_stats_block/template.html
+++ b/web/modules/custom/optawidgets/components/opta_tournament_stats_block/template.html
@@ -40,7 +40,7 @@
          <div class="flex">
             <div class="w-1/2 flex"></div>
             <div class="w-1/2 flex text-center justify-between pb-1 border-b" style="border-color: rgba(10,59,65,0.2);">
-               <div class="flex-1"><strong>Pts</strong></div>
+               <div class="flex-1">Pts</div>
                <div class="flex-1">J</div>
                <div class="flex-1">V</div>
                <div class="flex-1">D</div>
@@ -50,7 +50,7 @@
          </div>
          <div v-for="(row,index) in teams" class="ml-1 flex border-b-1 p-1 justify-between text-sm">
             <div class="w-1/2 flex items-center">
-               <div class="w-1/6 text-center px-2"><strong>{{ row.pos }}</strong></div>
+               <div class="w-1/6 text-center px-2">{{ row.pos }}</div>
                <div class="w-5/6 truncate ml-1">{{ row.name }}</div>
             </div>
             <div class="w-1/2 flex text-center justify-between pb-1 border-b" style="border-color: rgba(10,59,65,0.2);">
