update match away

--- a/web/modules/custom/optawidgets/components/opta_tournament_stats_block/template.html
+++ b/web/modules/custom/optawidgets/components/opta_tournament_stats_block/template.html
@@ -26,7 +26,7 @@
                      <span class="tw-font-bold">{{ match.home.score }}</span> - <span class="tw-font-bold">{{ match.away.score }}</span>
                   </div>
                   <div class="tw-w-5/12 tw-flex tw-items-center tw-justify-end tw-text-sm tw-text-right">
-                     <span>{{ match.home.name }}</span>
+                     <span>{{ match.away.name }}</span>
                      <img :src="'https://secure.omo.akamai.opta.net/image.php?secure=true&h=secure.omo.akamai.opta.net&sport=football&entity=team&description=badges&dimensions=65&id='+match.away.id" alt="" class="tw-h-8 tw-pl-2">
                   </div>
                </div>
