--- a/web/themes/custom/tailwindcss/src/sass/_views.scss
+++ b/web/themes/custom/tailwindcss/src/sass/_views.scss
@@ -1009,7 +1009,7 @@ div#block-nike {
 }
 
 div#horizontal-results {
-  padding-top: 0 !important;
+  //padding-top: 0 !important;
   @screen md {
     padding-top: 1rem !important;
   }
