agrego margen en bloque videos

--- a/web/themes/custom/tailwindcss/src/sass/_views.scss
+++ b/web/themes/custom/tailwindcss/src/sass/_views.scss
@@ -1004,6 +1004,9 @@ div#block-horizontalresults {
                     min-height: 235px;
                 }
             }
+            .row-1 {
+                margin-bottom: 1rem;
+            }
         }
         .views-col {
             float: left;
