color de fondo selects sección videos

--- a/web/themes/custom/tailwindcss/src/sass/_videos.scss
+++ b/web/themes/custom/tailwindcss/src/sass/_videos.scss
@@ -23,4 +23,5 @@ div[id*="block-views-block-videos-"] select {
     padding: 0 25px;
     height: 35px;
     text-align: center;
+    background-color: #c1c1c1;
 }
