ajuste scrolles horizontales webkit(chrome)

--- a/web/themes/custom/tailwindcss/src/sass/_scrollbars.scss
+++ b/web/themes/custom/tailwindcss/src/sass/_scrollbars.scss
@@ -1,20 +1,36 @@
 .scrollbar-w-2::-webkit-scrollbar {
-  width: .5rem !important;
-  height: .5rem !important;
+    width: .5rem !important;
+    height: .5rem !important;
 }
 
 .scrollbar-thumb-rounded::-webkit-scrollbar-thumb {
-  border-radius: .25rem !important;
+    border-radius: .25rem !important;
 }
 
 .scrollbar-thumb-gray::-webkit-scrollbar-thumb {
-  @apply bg-secondary;
+    @apply bg-secondary;
 }
 
 .scrollbar-track-gray-lighter::-webkit-scrollbar-track {
-  @apply bg-gray-650;
+    @apply bg-gray-650;
 }
 
 .scrolling-touch {
-  -webkit-overflow-scrolling: touch !important;
+    -webkit-overflow-scrolling: touch !important;
+}
+
+.overflow-x-auto::-webkit-scrollbar-button {
+  display: none !important;
+}
+
+.overflow-x-auto::-webkit-scrollbar {
+  background-color: #FFF;
+  border-radius: 8px;
+  height: 8px;
+}
+
+.overflow-x-auto::-webkit-scrollbar-thumb {
+  background-color: #0b3b41;
+  border-radius: 10px;
+  -webkit-border-radius: 10px;
 }
