--- a/web/themes/custom/tailwindcss/src/sass/_views.scss
+++ b/web/themes/custom/tailwindcss/src/sass/_views.scss
@@ -664,7 +664,7 @@ div#block-contenidoprincipaldelapagina-3 {
         text-align: center;
         padding: 0.6rem;
         background: #d4dbdc;
-        width: auto;
+        width: 2.8rem;
         margin: 0 5px 0 0 !important;
         @screen md {
             padding: 1rem;
