--- a/web/themes/custom/tailwindcss/src/sass/_videos.scss
+++ b/web/themes/custom/tailwindcss/src/sass/_videos.scss
@@ -33,3 +33,8 @@ div[id*="block-views-block-opinion-"] select {
         max-height: 136.2px;
     }
 }
+
+#block-contenidoprincipaldelapagina-3,
+.views-element-container {
+    max-width: 1280px;
+}
