css block programming

--- a/web/modules/custom/widget_programming/css/components/widget_programming.module.css
+++ b/web/modules/custom/widget_programming/css/components/widget_programming.module.css
@@ -1,4 +1,4 @@
-#owl-programming .owl-item{
+/*#owl-programming .owl-item{
 	width: max-content!important;
 }
 
@@ -13,3 +13,4 @@
 #owl-programming .date{
 	margin: 5px;
 }
+*/
