--- a/web/themes/custom/tailwindcss/src/sass/_responsive.scss
+++ b/web/themes/custom/tailwindcss/src/sass/_responsive.scss
@@ -145,9 +145,9 @@
 }
 
 #block-views-block-videos-opinion-block-2{
-    @apply block;
+    @apply tw-block tw-mb-4;
   @screen md{
-    @apply hidden;
+    @apply tw-hidden;
   }
 }
 
