--- a/web/themes/custom/tailwindcss/src/sass/_widgets.scss
+++ b/web/themes/custom/tailwindcss/src/sass/_widgets.scss
@@ -57,9 +57,9 @@
     @apply bg-secondary text-primary;
   }
   .Opta h2{
-    @apply h-auto p-4 text-primary  bg-white;
+    @apply h-auto py-4 text-primary  bg-white;
     .Opta-Title {
-      @apply text-3xl normal-case;
+      @apply text-3xl normal-case px-0;
     }
   }
   
