ajuste alto tabla de posiciones

--- a/web/themes/custom/tailwindcss/src/sass/_views.scss
+++ b/web/themes/custom/tailwindcss/src/sass/_views.scss
@@ -1046,7 +1046,7 @@ div#block-horizontalresults {
     #block-positionstableswidget {
         .opta-feeds-widget-positions {
             .scrollbar-w-2 {
-                max-height: 310px;
+                max-height: 310px !important;
             }
         }
     }
