--- a/web/themes/custom/tailwindcss/src/sass/_responsive.scss
+++ b/web/themes/custom/tailwindcss/src/sass/_responsive.scss
@@ -145,7 +145,10 @@
 }
 
 #block-views-block-videos-opinion-block-2{
-    @apply tw-block tw-mb-4;
+  @apply tw-block;
+  .title{
+  @apply tw-mt-4;
+  }
   @screen md{
     @apply tw-hidden;
   }
