--- a/web/themes/custom/tailwindcss/src/sass/_videos.scss
+++ b/web/themes/custom/tailwindcss/src/sass/_videos.scss
@@ -20,9 +20,14 @@
 
 div[id*="block-views-block-videos-"] select,
 div[id*="block-views-block-opinion-"] select {
+    height: 3rem;
+    padding-left: 1rem;
+    padding-right: 1rem;
+    padding-top: .75rem;
+    padding-bottom: .75rem;
     margin-bottom: 15px;
-    padding: 0 25px;
-    height: 35px;
+    //padding: 0 25px;
+    //height: 35px;
     text-align: center;
     background-color: #c1c1c1;
 }
