--- a/web/themes/custom/tailwindcss/src/sass/_videos.scss
+++ b/web/themes/custom/tailwindcss/src/sass/_videos.scss
@@ -21,6 +21,7 @@
 div[id*="block-views-block-videos-"] select,
 div[id*="block-views-block-opinion-"] select,
 div#blocktabs-columnas_blogs select{
+    @apply appearance-none;
     height: 3rem;
     padding-left: 1rem;
     padding-right: 1rem;
