--- a/web/themes/custom/tailwindcss/src/sass/_videos.scss
+++ b/web/themes/custom/tailwindcss/src/sass/_videos.scss
@@ -24,7 +24,7 @@ div[id*="block-views-block-videos-"]{
     }
     .form-item{
         &:after {
-            background-image: url(/themes/custom/tailwindcss/images/icons/down.svg);
+            background-image: url(/themes/custom/tailwindcss/images/icons/clock.png);
             content: "";
             width: 9px;
             background-size: 9px 5px;
