--- a/web/themes/custom/tailwindcss/src/sass/_videos.scss
+++ b/web/themes/custom/tailwindcss/src/sass/_videos.scss
@@ -26,9 +26,9 @@ div[id*="block-views-block-videos-"]{
         &:after {
             background-image: url(/themes/custom/tailwindcss/images/icons/clock.png);
             content: "";
-            width: 9px;
-            background-size: 9px 5px;
-            height: 5px;
+            width: 14px;
+            //background-size: 9px 5px;
+            height: 14px;
             top: 1.4rem;
             left: 7rem;
             position: absolute;
