--- a/web/themes/custom/tailwindcss/src/sass/_videos.scss
+++ b/web/themes/custom/tailwindcss/src/sass/_videos.scss
@@ -25,7 +25,7 @@ div[id*="block-views-block-videos-"]{
     .form-item{
         @apply relative;
         &:after {
-            background-image: url(/themes/custom/tailwindcss/images/icons/clock.png);
+            background-image: url(/themes/custom/tailwindcss/images/icons/down.svg);
             content: "";
             width: 14px;
             //background-size: 9px 5px;
