--- a/web/themes/custom/tailwindcss/src/sass/_videos.scss
+++ b/web/themes/custom/tailwindcss/src/sass/_videos.scss
@@ -18,6 +18,25 @@
     margin-top: 1.3rem;
 }
 
+#block-positionstableswidgetcolombia{
+/*     select{
+        min-width: 130px;
+    } */
+    .form-item{
+        @apply relative;
+        &:after {
+            content: "";
+            background-image: url(/themes/custom/tailwindcss/images/icons/down.svg);
+            background-size: 9px 5px;
+            width: 9px;
+            height: 5px;
+            top: 1.4rem;
+            left: 7rem;
+            position: absolute;
+        }
+    }
+}
+
 div[id*="block-views-block-videos-"]{
     select{
         min-width: 130px;
