--- a/web/themes/custom/tailwindcss/src/sass/_views.scss
+++ b/web/themes/custom/tailwindcss/src/sass/_views.scss
@@ -921,6 +921,12 @@ div#block-customadsblock-8 {
             margin-bottom: 1rem;
         }
     }
+    .description{
+        @apply tw-ml-0;
+        @screen md {
+            @apply tw-ml-4;
+        }
+    }
 }
 
 div#block-socialmedialinks {
