--- a/web/themes/custom/tailwindcss/src/sass/_views.scss
+++ b/web/themes/custom/tailwindcss/src/sass/_views.scss
@@ -922,9 +922,9 @@ div#block-customadsblock-8 {
         }
     }
     .description{
-        @apply tw-ml-0;
         @screen md {
-            @apply tw-ml-4;
+            @apply ml-4;
+            //margin-left: 1rem;
         }
     }
 }
