logo winsportsplus lazy

--- a/web/themes/custom/tailwindcss/templates/layout/page.html.twig
+++ b/web/themes/custom/tailwindcss/templates/layout/page.html.twig
@@ -165,7 +165,7 @@
         <div class="tw-bg-primary-dark">
             <div class="tw-container tw-mx-auto tw-p-2 tw-text-white tw-text-center tw-text-xs">
                 <div class="tw-flex tw-justify-center tw-p-4">
-                    <img src="/themes/custom/tailwindcss/images/logos/winsportsplus.png" alt="Winsports +">
+                    <img data-src="/themes/custom/tailwindcss/images/logos/winsportsplus.png" class="lazyload" alt="Winsports +">
                 </div>
                 <div class="tw-pb-4">
                     Copyright© 2020, Bogotá - Colombia. Todos los derechos reservados.  Está prohibida la reproducción total o parcial de la página
