--- a/web/modules/custom/optafeeds/components/horizontal_results/template.html
+++ b/web/modules/custom/optafeeds/components/horizontal_results/template.html
@@ -22,7 +22,7 @@
                         <span class="pl-1 text-xs font-medium title-color">Ver previa</span>
                     </a>
                     <a :href="'/matches/'+match.id" class="flex" v-else>
-                        <img src="/sites/default/files/widgets/play_button.png" alt="Resumen">
+                        <img src="/sites/default/files/widgets/play_button.png" alt="Resumen" width="19">
                         <span class="pl-1 text-xs font-medium title-color">Ver resumen</span>
                     </a>
                 </div>
