deploy loading gif

--- a/web/themes/custom/tailwindcss/templates/layout/page.html.twig
+++ b/web/themes/custom/tailwindcss/templates/layout/page.html.twig
@@ -45,6 +45,11 @@
  * @ingroup themeable
  */
 #}
+<div class="loading">
+<div id="loader">
+<img class="imagefile" src="/themes/custom/tailwindcss/images/ajax-loader.gif">
+</div>
+</div>
 <div id="header-page" class="tw-bg-primary">
     <div class="tw-container tw-mx-auto">
         <div id="meta-header">
