--- a/web/themes/custom/tailwindcss/src/sass/_loader.scss
+++ b/web/themes/custom/tailwindcss/src/sass/_loader.scss
@@ -33,3 +33,20 @@
 .ajax-progress.ajax-progress-fullscreen{
   display: none; 
 }
+
+.loading {
+  position: fixed;
+  top: 0;
+  width: 100%;
+  height: 100vh;
+  background-color: #fefefe;
+  overflow: hidden;
+  opacity: 1;
+  z-index: 100;
+  #loader{
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+  }
+}
