deploy loading gif

--- a/web/themes/custom/tailwindcss/templates/layout/html.html.twig
+++ b/web/themes/custom/tailwindcss/templates/layout/html.html.twig
@@ -32,6 +32,11 @@
     <js-placeholder token="{{ placeholder_token|raw }}">
   </head>
   <body{{ attributes }}>
+  <div class="loading">
+  <div id="loader">
+  <img class="imagefile" src="/themes/custom/tailwindcss/images/ajax-loader.gif">
+  </div>
+  </div>
   <div id="fb-root"></div>
   <script async defer crossorigin="anonymous" src="https://connect.facebook.net/es_LA/sdk.js#xfbml=1&version=v6.0&appId=539843382722340&autoLogAppEvents=1"></script>
 
